--- a/index.html
+++ b/index.html
@@ -1,11 +1,129 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Voz Delas</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Voz Delas - Proteção e Direitos para Mulheres</title>
+    <meta name="description" content="Conheça o programa Voz Delas e a plataforma ElaProtegida. Uma iniciativa de Maricá para combater a violência de gênero e garantir os direitos das mulheres." />
+    <meta name="author" content="SPM e CODEMAR" />
+    <meta name="keywords" content="Voz Delas, ElaProtegida, violência de gênero, proteção à mulher, Maricá, igualdade de gênero" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Voz Delas - Proteção e Direitos para Mulheres" />
+    <meta property="og:description" content="Acesse a plataforma ElaProtegida e saiba como Maricá está combatendo a violência de gênero com tecnologia e políticas públicas." />
+    <meta property="og:image" content="/imgs/logo.png" />
+    <meta property="og:url" content="https://vozdela.codemar-sa.com.br/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="pt_BR" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="57x57" href="imgs/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="imgs/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="imgs/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="imgs/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="imgs/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="imgs/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="imgs/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="imgs/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="imgs/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="imgs/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="imgs/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon/favicon-16x16.png">
+    <link rel="manifest" href="imgs/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#872360">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#872360">
+    <link rel="stylesheet" href="styles.css" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BVVLXHQBT6"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-BVVLXHQBT6');
+    </script>
 </head>
+
 <body>
-    <h1>Voz Delas</h1>
+
+    <section class="hero">
+        <div class="hero-content">
+            <img src="imgs/logo.png" alt="Logo Voz Delas" class="logo">
+            <h2>Voz Delas: Nenhuma mulher deveria sentir medo de viver na própria cidade.</h2>
+            <p>Um programa integrado de ações para enfrentar a violência de gênero, promover igualdade e empoderar mulheres e meninas.</p>
+            <!-- <div class="cta-buttons">
+                <a href="#plataforma" class="btn primary">Acesse a Plataforma</a>
+                <a href="#formacao" class="btn outline">Participe da Formação</a>
+                <a href="#forum" class="btn outline">Conheça o Fórum Voz Delas</a>
+            </div> -->
+        </div>
+    </section>
+
+    <section class="about">
+        <h2>O que é o Programa Voz Delas?</h2>
+        <p>
+            O <strong>Voz Delas</strong> é um conjunto de ações coordenadas pelo município de Maricá para proteger,
+            acolher e fortalecer mulheres em situação de vulnerabilidade. Atua em diversas frentes: digital,
+            educacional, institucional e social – com foco na igualdade de gênero, combate à violência e valorização da
+            mulher.
+        </p>
+    </section>
+
+    <section class="components">
+        <h2>Componentes do Programa</h2>
+
+        <div class="component" id="plataforma">
+            <h3>🔹 Plataforma Digital</h3>
+            <ul>
+                <li>📣 Denúncias anônimas e seguras</li>
+                <li>📱💻 Acesso por celular, tablet ou computador</li>
+                <li>🚨 Cálculo automático de risco de vida</li>
+                <li>🤝 Integração com rede de apoio</li>
+            </ul>
+            <!-- <a href="#" class="btn primary">Acesse a Plataforma</a> -->
+        </div>
+
+        <div class="component" id="formacao">
+            <h3>💼 Formação em Empreendedorismo Feminino</h3>
+            <p>Curso com 36h presenciais ministrado por mulheres, no Galpão Tecnológico de Maricá, com foco em gestão de negócios e marketing digital. Ideal para quem quer transformar sua ideia em ação e conquistar autonomia financeira.</p>
+            <!-- <a href="#" class="btn outline">Inscreva-se Gratuitamente</a> -->
+        </div>
+
+        <div class="component" id="forum">
+            <h3>🎤 Fórum Voz Delas</h3>
+            <p>Evento anual que fortalece o protagonismo feminino com rodas de conversa, painéis sobre liderança e vivências de mulheres. Inclui atividades sobre agroecologia, degustação de chás e troca de experiências.</p>
+            <!-- <a href="#" class="btn outline">Veja a Programação</a> -->
+        </div>
+    </section>
+
+    <section class="spaces">
+        <h2>Equipamentos e Espaços de Apoio</h2>
+        <ul>
+        <li data-icon="🏠"><strong>Casa da Mulher Heloneida Stuart</strong>atendimento psicológico, jurídico e profissionalizante.</li>
+        <li data-icon="📚"><strong>Biblioteca de Gênero Cora Coralina</strong>formação e debates sobre gênero, oficinas e filmes.</li>
+        <li data-icon="✂️"><strong>Salão Escola Tia Rosa & Espaço Holístico Raquel Pucello</strong>terapias da autoestima e capacitações gratuitas.</li>
+        </ul>
+    </section>
+
+    <section class="future">
+        <h2>Projeto Futuro: Maricá Mais Segura para a Mulher</h2>
+        <p>Bares, boates e restaurantes que adotarem protocolos de segurança e capacitação da equipe poderão receber o <strong>Selo Estabelecimento Amigo da Mulher</strong>.</p>
+        <!-- <a href="#" class="btn primary">Saiba Como Participar</a> -->
+    </section>
+
+    <footer class="site-footer">
+        <div class="footer-container">
+            <h3>Voz Delas</h3>
+            <p>&copy; 2024-2025 SPM e CODEMAR. Todos os direitos reservados.</p>
+            <ul class="footer-info">
+                <li>📍 Casa da Mulher Heloneida Stuart, Maricá - RJ</li>
+                <!-- <li>📞 (21) 99999-9999</li>
+                <li>✉️ vozdela@codemar-sa.com.br</li> -->
+            </ul>
+        </div>
+    </footer>
+
 </body>
+
 </html>
