--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
             <img src="imgs/logo.png" alt="Logo Voz Delas" class="logo">
             <h2>Voz Delas: Nenhuma mulher deveria sentir medo de viver na própria cidade.</h2>
             <p>Um programa integrado de ações para enfrentar a violência de gênero, promover igualdade e empoderar mulheres e meninas.</p>
-            <!-- <div class="cta-buttons">
-                <a href="#plataforma" class="btn primary">Acesse a Plataforma</a>
-                <a href="#formacao" class="btn outline">Participe da Formação</a>
-                <a href="#forum" class="btn outline">Conheça o Fórum Voz Delas</a>
-            </div> -->
+            <div class="cta-buttons">
+                <a href="https://elaprotegida.com.br/" target="_blank" class="btn primary">Acesse a Plataforma</a>
+                <!-- <a href="#formacao" class="btn outline">Participe da Formação</a>
+                <a href="#forum" class="btn outline">Conheça o Fórum Voz Delas</a> -->
+            </div>
         </div>
     </section>
 
