--- a/index.html
+++ b/index.html
@@ -62,12 +62,7 @@
 
     <section class="about">
         <h2>O que é o Programa Voz Delas?</h2>
-        <p>
-            O <strong>Voz Delas</strong> é um conjunto de ações coordenadas pelo município de Maricá para proteger,
-            acolher e fortalecer mulheres em situação de vulnerabilidade. Atua em diversas frentes: digital,
-            educacional, institucional e social – com foco na igualdade de gênero, combate à violência e valorização da
-            mulher.
-        </p>
+        <p>O <strong>Voz Delas</strong> é um conjunto de ações coordenadas pelo município de Maricá para proteger, acolher e fortalecer mulheres em situação de vulnerabilidade. Atua em diversas frentes: digital, educacional, institucional e social - com foco na igualdade de gênero, combate à violência e valorização da mulher.</p>
     </section>
 
     <section class="components">
@@ -100,9 +95,9 @@
     <section class="spaces">
         <h2>Equipamentos e Espaços de Apoio</h2>
         <ul>
-        <li data-icon="🏠"><strong>Casa da Mulher Heloneida Stuart</strong>atendimento psicológico, jurídico e profissionalizante.</li>
-        <li data-icon="📚"><strong>Biblioteca de Gênero Cora Coralina</strong>formação e debates sobre gênero, oficinas e filmes.</li>
-        <li data-icon="✂️"><strong>Salão Escola Tia Rosa & Espaço Holístico Raquel Pucello</strong>terapias da autoestima e capacitações gratuitas.</li>
+            <li data-icon="🏠"><strong>Casa da Mulher Heloneida Stuart</strong>atendimento psicológico, jurídico e profissionalizante.</li>
+            <li data-icon="📚"><strong>Biblioteca de Gênero Cora Coralina</strong>formação e debates sobre gênero, oficinas e filmes.</li>
+            <li data-icon="✂️"><strong>Salão Escola Tia Rosa & Espaço Holístico Raquel Pucello</strong>terapias da autoestima e capacitações gratuitas.</li>
         </ul>
     </section>
 
