--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
         </div>
     </section>
 
+    <section class="survey-embed" id="pesquisa">
+        <div class="survey-embed__header">
+            <h2>Pesquisa Voz Delas – Sua opinião transforma a cidade</h2>
+            <p>Leva poucos minutos e impacta diretamente as próximas ações do programa. Obrigada por contribuir!</p>
+            <a class="btn outline" target="_blank" rel="noopener" href="form.html">
+                Clique aqui e acesse o formulário
+            </a>
+        </div>
+    </section>
+
     <section class="about">
         <h2>O que é o Programa Voz Delas?</h2>
         <p>O <strong>Voz Delas</strong> é um conjunto de ações coordenadas pelo município de Maricá para proteger, acolher e fortalecer mulheres em situação de vulnerabilidade. Atua em diversas frentes: digital, educacional, institucional e social - com foco na igualdade de gênero, combate à violência e valorização da mulher.</p>
@@ -80,7 +90,7 @@
         </div>
 
         <div class="component" id="formacao">
-            <h3>💼 Formação em Empreendedorismo Feminino</h3>
+            <h3>- Formação em Empreendedorismo Feminino</h3>
             <p>Curso com 36h presenciais ministrado por mulheres, no Galpão Tecnológico de Maricá, com foco em gestão de negócios e marketing digital. Ideal para quem quer transformar sua ideia em ação e conquistar autonomia financeira.</p>
             <!-- <a href="#" class="btn outline">Inscreva-se Gratuitamente</a> -->
         </div>
