--- a/form.html
+++ b/form.html
@@ -47,10 +47,7 @@
 
 <body>
     <div class="survey-embed__frame">
-        <iframe title="Pesquisa Voz Delas"
-            src="https://forms.office.com/Pages/ResponsePage.aspx?id=Pi1vCHmIaEWQWtrSuAt9QGYQVkN-9EtHuyraeJUi9zNUNUZFWklZWlM1QkVaWllIMFhLOFRRNlBORS4u&embed=true"
-            frameborder="0" marginheight="0" marginwidth="0" allowfullscreen>
-        </iframe>
+        <iframe width="640px" height="480px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=Pi1vCHmIaEWQWtrSuAt9QGYQVkN-9EtHuyraeJUi9zNUNUZFWklZWlM1QkVaWllIMFhLOFRRNlBORS4u&embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
     </div>
 
     <noscript>
