--- a/index.html
+++ b/index.html
@@ -115,9 +115,35 @@
     </section>
 
     <section class="future">
-        <h2>Projeto Futuro: Maricá Mais Segura para a Mulher</h2>
-        <p>Bares, boates e restaurantes que adotarem protocolos de segurança e capacitação da equipe poderão receber o <strong>Selo Estabelecimento Amigo da Mulher</strong>.</p>
-        <!-- <a href="#" class="btn primary">Saiba Como Participar</a> -->
+        <h2>Selo Estabelecimento Amigo da Mulher</h2>
+        <p>
+            Bares, boates, restaurantes e outros empreendimentos já podem se cadastrar para participar do projeto 
+            <strong>Estabelecimento Amigo da Mulher</strong>, uma iniciativa que reconhece e apoia os locais comprometidos 
+            com a segurança, o respeito e o acolhimento às mulheres.
+        </p>
+        <p>
+            Os estabelecimentos que adotarem protocolos de prevenção à violência e capacitação de suas equipes 
+            receberão o <strong>Selo Estabelecimento Amigo da Mulher</strong>, certificando seu compromisso em promover 
+            ambientes seguros, igualitários e livres de assédio.
+        </p>
+        <p>
+            Para obter orientações e acesso à plataforma de formação, preencha o formulário a seguir:
+        </p>
+
+        <div class="survey-embed__frame">
+            <iframe 
+                src="https://forms.cloud.microsoft/r/A3eWx8Zea5"
+                width="100%"
+                height="800"
+                frameborder="0"
+                marginwidth="0"
+                marginheight="0"
+                allowfullscreen
+                webkitallowfullscreen
+                mozallowfullscreen
+                msallowfullscreen>
+            </iframe>
+        </div>
     </section>
 
     <footer class="site-footer">
